<resources>
    <string name="app_name">TipCalculator</string>
    <string name="party_size">Party size:</string>
    <string name="check_amount">Check amount:</string>
    <string name="compute_tip">COMPUTE TIP</string>

    <string name="tips_and_totals_per_person">Tips and Totals (per person)</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="_15tip">15%</string>
    <string name="_15">15%</string>
    <string name="_20tip">20%</string>
    <string name="_20total">20%</string>
    <string name="_25tip">25%</string>
    <string name="_25total">25%</string>
    <string name="calculate_tip">Calculate Tip</string>
</resources>
