<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/checkamountview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/check_amount"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/checkamountview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkamountview" />

    <TextView
        android:id="@+id/partysizeview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/party_size"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkamountview" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/partysizeview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/partysizeview" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/tips_and_totals_per_person"
        android:textAllCaps="false"
        android:textColor="#070606"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/tipview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tip"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/totalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipview" />

    <TextView
        android:id="@+id/fifteentipview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/_15"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tipview"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/fifteentotalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/_15"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/totalview"
        app:layout_constraintTop_toBottomOf="@+id/fifteentipview" />

    <TextView
        android:id="@+id/twentytipview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/_20tip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fifteentipview"
        app:layout_constraintEnd_toStartOf="@+id/twofivetipview"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/fifteentipview"
        app:layout_constraintTop_toTopOf="@+id/fifteentipview"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/twofivetipview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/_25tip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/twentytipview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentytipview"
        app:layout_constraintTop_toTopOf="@+id/twentytipview"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/twentytotalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/_20total"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fifteentotalview"
        app:layout_constraintEnd_toStartOf="@+id/twofivetotalview"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/fifteentotalview"
        app:layout_constraintTop_toTopOf="@+id/fifteentotalview" />

    <TextView
        android:id="@+id/twofivetotalview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/_25total"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/twentytotalview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twentytotalview"
        app:layout_constraintTop_toTopOf="@+id/twentytotalview"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fifteentotalview"
        app:layout_constraintEnd_toStartOf="@+id/twentytipview"
        app:layout_constraintStart_toEndOf="@+id/fifteentipview"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/twentytotalview"
        app:layout_constraintStart_toEndOf="@+id/fifteentotalview"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/twentytotalview"
        app:layout_constraintEnd_toStartOf="@+id/twofivetipview"
        app:layout_constraintStart_toEndOf="@+id/twentytipview"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/twofivetotalview"
        app:layout_constraintStart_toEndOf="@+id/twentytotalview"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/twofivetotalview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twofivetipview"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twofivetotalview"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>